--- a/cats.html
+++ b/cats.html
@@ -8,17 +8,16 @@
   </head>
   <body>
   <h1> Household Pets </h1>
-  <h2> My Favorite Pets </h2>
-<img src= "dog2.jpeg" alt= "black weiner dog" >
+  <h2> Cats </h2>
 
-<br>
-
-<nav>
+  <nav>
   <ul>
     <li> <a href= "index.html">Home</a></li>
     <li>  <a href= "birds.html">Bird</a></li>
-    <li>  <a href= "cats.html">Cat</a></li>
     <li>  <a href= "dogs.html">Dog</a></li>
 
-</body>
+  <br>
+
+  <img src= "cat.jpg" alt= "orange and white cat" >
+  </body>
 </html>
