--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
   <body>
   <h1> Household Pets </h1>
   <h2> My Favorite Pets </h2>
-<img src= "dog2.jpeg" alt= "black weiner dog" >
-
-<br>
-
 <nav>
   <ul>
-    <li> <a href= "index.html">Home</a></li>
-    <li>  <a href= "birds.html">Bird</a></li>
-    <li>  <a href= "cats.html">Cat</a></li>
-    <li>  <a href= "dogs.html">Dog</a></li>
-
+    <li><a href="index.html">Home</a></li>
+    <li><a href="birds.html">Bird</a></li>
+    <li><a href="cats.html">Cat</a></li>
+    <li><a href="dogs.html">Dog</a></li>
+  <ul>
+</nav>
+<img src= "dog2.jpeg" alt= "black weiner dog">
 </body>
 </html>
