--- a/birds.html
+++ b/birds.html
@@ -9,15 +9,14 @@
   <body>
   <h1> Household Pets </h1>
   <h2> Birds </h2>
+<nav>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="birds.html">Bird</a></li>
     <li><a href="cats.html">Cat</a></li>
     <li><a href="dogs.html">Dog</a></li>
-  <ul>
-    
-  <br>
-
+  </ul>
+</nav>    
   <img src= "parakeet.jpg" alt= "small green bird" >
   </body>
 </html>
