--- a/cats.html
+++ b/cats.html
@@ -9,15 +9,14 @@
   <body>
   <h1> Household Pets </h1>
   <h2> Cats </h2>
+<nav>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="birds.html">Bird</a></li>
     <li><a href="cats.html">Cat</a></li>
     <li><a href="dogs.html">Dog</a></li>
-  <ul>
-    
-  <br>
-
+  </ul>
+</nav>
   <img src= "cat.jpg" alt= "orange and white cat" >
   </body>
 </html>
