--- a/dogs.html
+++ b/dogs.html
@@ -9,15 +9,14 @@
   <body>
   <h1> Household Pets </h1>
   <h2> Dogs </h2>
+<nav>  
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="birds.html">Bird</a></li>
     <li><a href="cats.html">Cat</a></li>
     <li><a href="dogs.html">Dog</a></li>
   <ul>
-    
-  <br>
-  
+</nav>  
   <img src= "dog.jpg" alt= "furry brown dog smiling" >
   </body>
 </html>
